--- a/single_neuron.html
+++ b/single_neuron.html
@@ -2,9 +2,105 @@
 <html>
   <head>
     <title>Single Neuron</title>
+
+    <script type="text/javascript">
+    var VAR_NAMES = ['in1', 'in2', 'in3', 'w1', 'w2', 'w3'];
+    function App() {
+      this._sliders = {};
+      this._valueLabels = {};
+      var t = document.getElementsByTagName('table')[0];
+      for (var i = 0, len = VAR_NAMES.length; i < len; ++i) {
+        var v = VAR_NAMES[i];
+        var slider = document.createElement('input');
+        this._sliders[v] = slider;
+        slider.type = 'range';
+        slider.min = -3;
+        slider.max = 3;
+        slider.step = 1e-4;
+        slider.value = Math.random()*4 - 2;
+        slider.addEventListener('change', this.updateValues.bind(this));
+        slider.addEventListener('input', this.updateValues.bind(this));
+        var valueLabel = document.createElement('td');
+        this._valueLabels[v] = valueLabel;
+        var labelColumn = document.createElement('td');
+        labelColumn.textContent = v;
+        var row = document.createElement('tr');
+        row.appendChild(labelColumn);
+        row.appendChild(slider);
+        row.appendChild(valueLabel);
+        t.appendChild(row);
+      }
+      this.updateValues();
+    }
+
+    App.prototype.get = function(varName) {
+      return parseFloat(this._sliders[varName].value);
+    };
+
+    App.prototype.updateValues = function() {
+      for (var i = 0, len = VAR_NAMES.length; i < len; ++i) {
+        var v = VAR_NAMES[i];
+        var value = this.get(v);
+        this._valueLabels[v].textContent = value.toFixed(2);
+
+        var object = document.getElementById(v);
+        object.style.color = numberColor(value);
+      }
+
+      var output = 0;
+      for (i = 1; i <= 3; ++i) {
+        output += this.get('w'+i) * this.get('in'+i);
+      }
+      document.getElementById('out').style.stroke = numberColor(output);
+      document.getElementById('answer').textContent = output.toFixed(2);
+    };
+
+    function handleLoad() {
+      new App();
+    }
+
+    function numberColor(num) {
+      var amountPos = Math.min(1, Math.max(0, (num + 3) / 6));
+      var mergeVals = function(x, y) {
+        var res = Math.round(amountPos*x + (1-amountPos)*y).toString(16);
+        if (res.length == 2) {
+          return res;
+        } else {
+          return '0' + res;
+        }
+      }
+      var r = mergeVals(0x6f, 0xe0);
+      var g = mergeVals(0xa8, 0x66);
+      var b = mergeVals(0xdc, 0x66);
+      return '#' + r + g + b;
+    }
+    </script>
+
+    <style type="text/css">
+    body {
+      font-family: sans-serif;
+      text-align: center;
+    }
+    input {
+      width: 200px;
+    }
+    svg {
+      width: 100%;
+      max-width: 400px;
+      display: inline-block;
+    }
+    table {
+      display: inline-block;
+    }
+    </style>
   </head>
-  <body style="text-align: center">
-    <svg viewBox="0 0 100 100" style="width: 400px; display: inline-block">
+
+  <body onload="handleLoad()">
+    <table></table>
+    <br><br>
+    <label>w1*in1 + w2*in2 + w3*in3 = </label><label id="answer"></label>
+    <br>
+    <svg viewBox="5 20 75 60">
       <g id="in1" color="#e06666">
         <line x1="20" y1="30" x2="50" y2="50"
           stroke="currentColor" stroke-width="2" />
@@ -25,10 +121,10 @@
         stroke-width="2" stroke="#e06666" stroke-linecap="round" />
 
       <circle cx="50" cy="50" r="10" fill="#ffd967" />
-      <g fill="#e06666" stroke="#555" stroke-width="0.5">
-        <circle cx="41.6795" cy="44.453" r="2" id="w1" />
-        <circle cx="40" cy="50" r="2" id="w2" />
-        <circle cx="41.6795" cy="55.547" r="2" id="w3" />
+      <g color="#e06666" stroke="#555" stroke-width="0.5">
+        <circle cx="41.6795" cy="44.453" r="2" id="w1" fill="currentColor" />
+        <circle cx="40" cy="50" r="2" id="w2" fill="currentColor" />
+        <circle cx="41.6795" cy="55.547" r="2" id="w3" fill="currentColor" />
       </g>
     </svg>
   </body>
