--- a/single_neuron.html
+++ b/single_neuron.html
@@ -1,23 +1,29 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Single Neuron</title>
+
+    <script src="diagram.js"></script>
 
     <script type="text/javascript">
     var VAR_NAMES = ['in1', 'in2', 'in3', 'w1', 'w2', 'w3'];
+    var VARS_WITH_OUT = VAR_NAMES.concat(['out']);
     function App() {
       this._sliders = {};
       this._valueLabels = {};
+      this._diagram = new window.Diagram(VARS_WITH_OUT, this.get.bind(this));
       var t = document.getElementsByTagName('table')[0];
       for (var i = 0, len = VAR_NAMES.length; i < len; ++i) {
         var v = VAR_NAMES[i];
         var slider = document.createElement('input');
         this._sliders[v] = slider;
         slider.type = 'range';
-        slider.min = -3;
-        slider.max = 3;
+        slider.min = -1;
+        slider.max = 1;
         slider.step = 1e-4;
-        slider.value = Math.random()*4 - 2;
+        slider.value = Math.random()*2 - 1;
         slider.addEventListener('change', this.updateValues.bind(this));
         slider.addEventListener('input', this.updateValues.bind(this));
         var valueLabel = document.createElement('td');
@@ -36,6 +42,13 @@
     }
 
     App.prototype.get = function(varName) {
+      if (varName === 'out') {
+        var output = 0;
+        for (i = 1; i <= 3; ++i) {
+          output += this.get('w'+i) * this.get('in'+i);
+        }
+        return output;
+      }
       return parseFloat(this._sliders[varName].value);
     };
 
@@ -47,21 +60,13 @@
     };
 
     App.prototype.updateValues = function() {
+      this._diagram.update();
       for (var i = 0, len = VAR_NAMES.length; i < len; ++i) {
         var v = VAR_NAMES[i];
         var value = this.get(v);
         this._valueLabels[v].textContent = value.toFixed(2);
-
-        var object = document.getElementById(v);
-        object.style.color = numberColor(value);
       }
-
-      var output = 0;
-      for (i = 1; i <= 3; ++i) {
-        output += this.get('w'+i) * this.get('in'+i);
-      }
-      document.getElementById('out').style.stroke = numberColor(output);
-      document.getElementById('answer').textContent = output.toFixed(2);
+      document.getElementById('answer').textContent = this.get('out').toFixed(2);
     };
 
     var app;
@@ -120,28 +125,38 @@
     <svg viewBox="5 20 75 60">
       <g id="in1" color="#e06666">
         <line x1="20" y1="30" x2="50" y2="50"
-          stroke="currentColor" stroke-width="2" />
-        <circle cx="20" cy="30" r="5" fill="currentColor" stroke="#555" />
+          stroke="currentColor" stroke-width="2"
+          data-minwidth="0.5" data-maxwidth="2" />
+        <circle cx="20" cy="30" r="5" fill="currentColor" stroke="#555" stroke-width="0.4"
+          data-minradius="3" data-maxradius="4" />
       </g>
       <g id="in2" color="#e06666">
         <line x1="20" y1="50" x2="50" y2="50"
-          stroke="currentColor" stroke-width="2" />
-        <circle cx="20" cy="50" r="5" fill="currentColor" stroke="#555" />
+          stroke="currentColor" stroke-width="2"
+          data-minwidth="0.5" data-maxwidth="2" />
+        <circle cx="20" cy="50" r="5" fill="currentColor" stroke="#555" stroke-width="0.4"
+          data-minradius="3" data-maxradius="4" />
       </g>
       <g id="in3" color="#e06666">
         <line x1="20" y1="70" x2="50" y2="50"
-          stroke="currentColor" stroke-width="2" />
-        <circle cx="20" cy="70" r="5" fill="currentColor" stroke="#555" />
+          stroke="currentColor" stroke-width="2"
+          data-minwidth="0.5" data-maxwidth="2" />
+        <circle cx="20" cy="70" r="5" fill="currentColor" stroke="#555" stroke-width="0.4"
+          data-minradius="3" data-maxradius="4" />
       </g>
 
       <line x1="50" y1="50" x2="70" y2="50" id="out"
-        stroke-width="2" stroke="#e06666" stroke-linecap="round" />
+        stroke-width="2" stroke="currentColor" stroke-linecap="round"
+        data-minwidth="0.5" data-maxwidth="2" data-limitboost="3" />
 
       <circle cx="50" cy="50" r="10" fill="#ffd967" />
-      <g color="#e06666" stroke="#555" stroke-width="0.5">
-        <circle cx="41.6795" cy="44.453" r="2" id="w1" fill="currentColor" />
-        <circle cx="40" cy="50" r="2" id="w2" fill="currentColor" />
-        <circle cx="41.6795" cy="55.547" r="2" id="w3" fill="currentColor" />
+      <g color="#e06666" stroke="#555" stroke-width="0.4">
+        <circle cx="41.6795" cy="44.453" r="2" id="w1" fill="currentColor"
+          data-minradius="1.5" data-maxradius="2.2" />
+        <circle cx="40" cy="50" r="2" id="w2" fill="currentColor"
+          data-minradius="1.5" data-maxradius="2.2" />
+        <circle cx="41.6795" cy="55.547" r="2" id="w3" fill="currentColor"
+          data-minradius="1.5" data-maxradius="2.2" />
       </g>
     </svg>
   </body>
