--- a/network/index.html
+++ b/network/index.html
@@ -10,6 +10,7 @@
 
   <body onload="handleLoad()">
     <button onclick="zeroAll()">Zero</button>
+    <button onclick="randomize()">Randomize</button>
     <br><br>
     <div id="edit-view" class="disabled">
       <input id="edit-slider" type="range" min="-1" max="1" step="0.0001" />
